deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-deployment
  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
      - name: goapp
        image: 981935913893.dkr.ecr.us-west-2.amazonaws.com/k8-go-server:dummy
        ports:
        - containerPort: 8080
