service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
  namespace: test-playground
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  selector:
    app:  goapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
